# unpatched-server

./: .gitignore  .gitmodules  Cargo.toml  DB.md  README.md  api.yaml  build.rs
.github/: dependabot.yml
.github/workflows/: codecov.yml  dtz-artifact.yml  pr.yml  release.yml
assets/: index.html  script.js
page/: hugo.toml
page/_static/: index.html  script.js
page/content/: _index.md  charge.md
page/static/: agents.js  index.html  script.js
site/: hugo.toml
site/content/: _index.md  agents.md  executions.md  hosts.md  login.md  next.md  schedules.md  scripts.md  users.md
site/layouts/: index.html
site/layouts/_default/: baseof.html
site/layouts/partials/: head.html  header.html
site/static/: agents.js
site/static/js/: dtz-context-dropdown.js
src/: db.rs  execution.rs  host.rs  jwt.rs  main.rs  schedule.rs  script.rs  swagger.rs  user.rs  webpage.rs
