[package]
name = "unpatched-server"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Alexander Kunde<alexander@apimeister.com>", "Jens Walter<jens@apimeister.com>"]

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum", features = ["ws"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.19"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "macros" ] }

[[bin]]
name = "unpatched-server"
path = "src/main.rs"
