[package]
name = "unpatched-server"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Alexander Kunde<alexander@apimeister.com>", "Jens Walter<jens@apimeister.com>"]

[dependencies]
axum = { version = "0.6", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
include_dir = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite"] }
systemctl = { git = "https://github.com/alexkunde/systemctl.git", branch = "serde" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = [ "v4", "fast-rng", "macro-diagnostics", "serde"]}

[build-dependencies]
hugo-build = "0.115.2"

[[bin]]
name = "unpatched-server"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
