[package]
name = "unpatched-server"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["Alexander Kunde<alexander@apimeister.com>", "Jens Walter<jens@apimeister.com>"]

[dependencies]
argon2 = "0.5.1"
axum = { version = "0.6", features = ["ws", "headers"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cron = "0.12.0"
email_address = "0.2.4"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
hyper = "0.14"
include_dir = "0.7"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace", "auth"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = [ "v4", "fast-rng", "macro-diagnostics", "serde"]}
rcgen = "0.11"

[dev-dependencies]
hyper = "0.14"

[build-dependencies]
hugo-build = "0.118"

[[bin]]
name = "unpatched-server"
path = "src/main.rs"

# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
